# pyv4l2framesink

./: CMakeLists.txt  Dockerfile  MANIFEST.in.in  README.md  build-requirements.txt  generate-bindings.sh.in  setup.py  v4l2framesink.cpp
.devcontainer/: devcontainer.json
examples/python/: grayscale.py
include/v4l2framesink/: v4l2framesink.h
